first version finished

--- a/assets/ihana.scss
+++ b/assets/ihana.scss
@@ -1,19 +1,15 @@
 // All I Need
-
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Core
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 @import '../bower_components/allineed/src/allineed/core/fonts';
 @import '../bower_components/allineed/src/allineed/core/variables';
-
 @import 'ihana-variables';
 @import '../bower_components/allineed/src/allineed/core/base';
-
+@import 'ihana-base';
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Components
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 @import '../bower_components/allineed/src/allineed/core/components/blockquotes';
 @import '../bower_components/allineed/src/allineed/core/components/buttons';
 @import '../bower_components/allineed/src/allineed/core/components/captions';
@@ -27,83 +23,95 @@
 @import '../bower_components/allineed/src/allineed/core/components/navbar';
 @import '../bower_components/allineed/src/allineed/core/components/panels';
 @import '../bower_components/allineed/src/allineed/core/components/tables';
-
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Modules
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 @import 'ihana-sidebar.scss';
-
-
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Images
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 img {
- width: 100%;
- display: block;
- position: relative;
-
- border: $ihana-border-style;
- background-size: cover;
- margin: 1em 0;
+    width          : 60%;
+    display        : block;
+    position       : relative;
+    border         : $ihana-border-style;
+    background-size: cover;
+    margin         : 2em auto;
 }
-
 .image {
- margin: 0;
+    margin: 0;
 }
-
+.ihana-blog-logo {
+    border-radius: 5px 50%;
+}
 .ihana-post-image {
- width: 100%;
- height: 200px;
- display: block;
- position: relative;
- background-size: cover;
-
- border: $ihana-border-style;
- transition: all $sidebar-transition-width-duration;
-
-
- &:hover {
-  transform: scale(1.1, 1.1);
- }
+    width          : 100%;
+    height         : $ihana-post-caption-height;
+    display        : block;
+    position       : relative;
+    background-size: cover;
+    border         : $ihana-border-style;
+    transition     : all $sidebar-transition-width-duration;
+    &:hover {
+        transform: scale(1.1, 1.1);
+    }
 }
-
+.ihana-container,
+.ihana-post-container {
+    margin: $base-padding-size * 2 0;
+}
 .ihana-post-title {
- font-size: 2em;
- padding: 0;
+    font-size  : 2em;
+    padding    : 0;
+    font-family: $font-family-lato-bold;
 }
-
+.ihana-pagination {
+    margin: $base-padding-size * 2 0;
+}
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Panels
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
 .panel-post-header-link {
- text-decoration: none;
- vertical-align: middle;
- text-transform: uppercase;
-
- i {
-  vertical-align: text-bottom;
- }
+    text-decoration: none;
+    vertical-align : middle;
+    text-transform : uppercase;
+    font-family    : $font-family-open-sans-bold;
+    i {
+        vertical-align: text-bottom;
+    }
 }
-
 .panel-prev-post {
- .panel-header {
-  text-align: left;
- }
+    .panel-header {
+        text-align: left;
+    }
 }
-
 .panel-next-post {
- .panel-header {
-  text-align: right;
- }
+    .panel-header {
+        text-align: right;
+    }
 }
-
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Links
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-.ihana-post-title {
- text-decoration: none;
+a,
+a:active,
+a:focus,
+a:visited {
+    color: $colors-primary-background;
+    &:hover {
+        color: $colors-primary-background-hover;
+    }
 }
+.ihana-post-title {
+    text-decoration: none;
+}
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// Code
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+code {
+    margin: 2em 0;
+}
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+// Media Queries
+// ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+@media (min-width: $base-media-phone-min) {}
