--- a/partials/author.hbs
+++ b/partials/author.hbs
@@ -13,7 +13,7 @@
                     {{#if bio}}
                         <p>{{bio}}</p>
                     {{/if}}
-                    <a class="button" id="moreAboutMe" href="{{url}}" target="_blank">More about me</a>
+                    <a class="button" id="moreAboutMe" href="{{url}}">More about me</a>
                 </section>
             </section>
         </section>
