--- a/author.hbs
+++ b/author.hbs
@@ -1,28 +1,31 @@
 {{!< default}}
 
-{{#author}}
-    <section class="author-profile inner">
-        {{#if image}}
-        <figure class="author-image">
-            <div class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></div>
-        </figure>
-        {{/if}}
-        <h1 class="author-title">{{name}}</h1>
-        {{#if bio}}
-            <h2 class="author-bio">{{bio}}</h2>
-        {{/if}}
-        <div class="author-meta">
-            {{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}
-            {{#if website}}<span class="author-link icon-link"><a href="{{website}}">{{website}}</a></span>{{/if}}
-            <span class="author-stats"><i class="icon-stats"></i> {{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}}</span>
-        </div>
-    </section>
-{{/author}}
+<main class="container ihana-container" role="main">
 
-{{! The main content area on the homepage }}
-<main class="content" role="main">
+    {{#author}}
 
-    {{! The tag below includes the post loop - partials/loop.hbs }}
+        <section class="panel">
+            <section class="panel-body">
+                <section class="row">
+                    <section class="three columns u-text-centered">
+                        {{#if image}}
+                            <img src="{{image}}" class="image image-squared" />
+                        {{/if}}
+                    </section>
+                    <section class="nine columns">
+                        <h3 class="example-header">{{name}}</h3>
+                        {{#if bio}}
+                            <p>{{bio}}</p>
+                        {{/if}}
+                        {{#if location}}<span><i class="icon icon-location"></i> {{location}}</span>{{/if}}
+                        {{#if website}} | <span><i class="icon icon-link"></i> <a href="{{website}}">{{website}}</a></span>{{/if}}
+                        | <span><i class="icon-stats"></i> {{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}}</span>
+                    </section>
+                </section>
+            </section>
+        </section>
+
+    {{/author}}
+
     {{> "loop"}}
-
 </main>
