--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -4,24 +4,26 @@
 
         <!--  Show / Hide Blog Logo -->
 
-        <!--
-        {{#if @blog.logo}}
+
+        <!-- {{#if @blog.logo}}
             <div class="row">
                 <div class="twelve columns u-text-centered">
 
-                    <!  Blog Logo >
+                   <!  Blog Logo >
                     <a class="blog-logo--link" href="{{@blog.url}}">
                         <img class="image image-circle image-small" src="{{@blog.logo}}" alt="example circle image" />
                     </a>
                 </div>
             </div>
         {{/if}}
+       -->
 
-        -->
 
         <!--  Blog Info -->
-        <h1>{{@blog.title}}</h1>
-        <h2>{{@blog.description}}</h2>
+        <!--
+         <h1>{{@blog.title}}</h1>
+         <h2>{{@blog.description}}</h2>
+       -->
 
         <section class="u-centered">
 
