--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,3 +1,5 @@
 {{#foreach navigation}}
-	<li class="sidebar-item {{#if current}}sidebar-item-active{{/if}}"><a class="navbar-link" href="{{url}}">{{label}}</a></li>
+	<li class="sidebar-item {{#if current}}sidebar-item-active{{/if}}">
+		<a class="navbar-link" href="{{url}}">{{label}}</a>
+	</li>
 {{/foreach}}
