social media dded

--- a/assets/ihana.scss
+++ b/assets/ihana.scss
@@ -105,6 +105,14 @@ a:visited {
 .ihana-post-title {
     text-decoration: none;
 }
+.ihana-social-media {
+ font-size: 1.5em;
+
+ a {
+  text-decoration: none;
+  padding: 0.2em;
+ }
+}
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 // Code
 // ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
