--- a/default.hbs
+++ b/default.hbs
@@ -29,10 +29,11 @@
         <section class="container">
             {{{body}}}
         </section>
+        {{> "footer"}}
     </section>
 
     <!-- Ghost Foot -->
-    {{ghost_foot}} {{> "google_analytics"}} {{> "footer" }}
+    {{ghost_foot}} {{> "google_analytics"}}
 
     <script type="text/javascript" src="{{asset "js/ihana.js"}}"></script>
 </body>
