--- a/partials/sidebar.hbs
+++ b/partials/sidebar.hbs
@@ -17,8 +17,11 @@
         <h4>{{@blog.title}}</h4>
         <p>{{@blog.description}}</p>
 
+        <!--  Sidebar Items -->
+
+        {{> "social_media"}}
     </header>
-    <!--  Sidebar Items -->
+
     <nav>
         <ul class="sidebar-list">
 
@@ -28,14 +31,12 @@
             <!--  Custom Links -->
             <!-- <li class="sidebar-item"><a class="navbar-link" href="#">Home</a></li> -->
         </ul>
-
     </nav>
 
     <!--  Sidebar Footer - Author Info -->
 
     <footer class="sidebar-footer">
-        <p>Copyright Ihana Ghost Theme. Made with <span class="u-text-danger">&#x2764;</span> by <a href="http://elenatorro.github.io/">Elena Torró.</a>
-        </p>
+        <p>Copyright Ihana Ghost Theme. Made with <span class="u-text-danger">&#x2764;</span> by <a href="http://elenatorro.github.io/">Elena Torró.</a></p>
     </footer>
 
 </section>
