--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,1 +1,4 @@
-<footer class="footer"></footer>
+<footer class="container container-section">
+  <!--  Social Media -->
+  {{> "social_media"}}
+</footer>
