--- a/default.hbs
+++ b/default.hbs
@@ -22,7 +22,7 @@
     {{> "sidebar"}}
 
     <!-- Sidebar Toggle -->
-    <a class="sidebar-toggle button-link" id="sidebar-toggle"></a>
+    <!-- <a class="sidebar-toggle button-link" id="sidebar-toggle"></a> -->
 
     <!-- Content Wrapper -->
     <section id="main-wrapper" class="container wrapper">
