--- a/page.hbs
+++ b/page.hbs
@@ -1,20 +1,31 @@
 {{!< default}}
 
-{{! This is a page template. A page outputs content just like any other post, and has all the same
-    attributes by default, but you can also customise it to behave differently if you prefer. }}
-
-{{! Everything inside the #post tags pulls data from the page }}
 {{#post}}
 
-<header class="header header-post">
-	<a href="{{@blog.url}}"><img class="image-logo image-logo--page" src="{{image}}" alt="Blog Logo" /></a>
-    <h1>{{title}}</h1>
-    <h2>{{@blog.title}}</h2>
-</header>
+<main class="container ihana-post-container" role="main">
 
-<main class="container" role="main">
+    <header class="header">
+      <section class="header-post">
+          <section class="row">
+              <section class="twelve columns">
+                 <h1>{{title}}</h1>
+              </section>
+          </section>
+      </section>
+    </header>
+
     <section class="row">
-        {{content}}
+        <section class="twelve columns">
+            {{content}}
+        </section>
     </section>
+		
+    <aside class="row container-section">
+       {{> "author"}}
+    </aside>
 </main>
+
+<!--  Next & Previous Post -->
+{{> 'post_navigation'}}
+
 {{/post}}
