added config files: google analytics and disqus

--- a/default.hbs
+++ b/default.hbs
@@ -36,6 +36,8 @@
     {{ghost_foot}} {{> "google_analytics"}}
 
     <script type="text/javascript" src="{{asset "js/ihana.js"}}"></script>
+
+    {{> "google_analytics"}}
 </body>
 
 </html>
