--- a/post.hbs
+++ b/post.hbs
@@ -24,9 +24,19 @@
         </section>
     </section>
 
-    <aside class="row container-section">
+    <section class="row container-section">
+        <section class="twelve columns">
+            {{> "disqus"}}
+        </section>
+    </section>
+
+
+
+    <section class="row container-section">
        {{> "author"}}
-    </aside>
+    </section>
+
+
 </main>
 
 <!--  Next & Previous Post -->
