--- a/author.hbs
+++ b/author.hbs
@@ -4,16 +4,16 @@
 
     {{#author}}
 
-        <section class="panel">
-            <section class="panel-body">
+        <section class="ain-panel">
+            <section class="ain-panel-body">
                 <section class="row">
                     <section class="three columns u-text-centered">
                         {{#if image}}
-                            <img src="{{image}}" class="image image-squared" />
+                            <img src="{{image}}" class="ain-image-squared" />
                         {{/if}}
                     </section>
                     <section class="nine columns">
-                        <h3 class="example-header">{{name}}</h3>
+                        <h3>{{name}}</h3>
                         {{#if bio}}
                             <p>{{bio}}</p>
                         {{/if}}
