--- a/default.hbs
+++ b/default.hbs
@@ -22,10 +22,10 @@
     {{> "sidebar"}}
 
     <!-- Sidebar Toggle -->
-    <!-- <a class="sidebar-toggle button-link" id="sidebar-toggle"></a> -->
+    <a class="ain-sidebar-toggle ain-button-link" id="ain-sidebar-toggle"></a>
 
     <!-- Content Wrapper -->
-    <section id="main-wrapper" class="container wrapper">
+    <section id="ain-main-wrapper" class="container ain-wrapper">
         <section class="container">
             {{{body}}}
         </section>
