--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,29 +1,1 @@
-<header>
-
-    <section class="container">
-
-        <!--  Show / Hide Blog Logo -->
-
-
-        <!-- {{#if @blog.logo}}
-            <div class="row">
-                <div class="twelve columns u-text-centered">
-
-                   <!  Blog Logo >
-                    <a class="blog-logo--link" href="{{@blog.url}}">
-                        <img class="image image-circle image-small" src="{{@blog.logo}}" alt="example circle image" />
-                    </a>
-                </div>
-            </div>
-        {{/if}}
-       -->
-
-
-        <!--  Blog Info -->
-        <!--
-         <h1>{{@blog.title}}</h1>
-         <h2>{{@blog.description}}</h2>
-       -->
-
-    </section>
-</header>
+<header></header>
