--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -1,5 +1,5 @@
 {{#foreach navigation}}
-	<li class="sidebar-item {{#if current}}sidebar-item-active{{/if}}">
-		<a class="navbar-link" href="{{url}}">{{label}}</a>
+	<li class="ain-sidebar-item {{#if current}}ain-sidebar-item-active{{/if}}">
+		<a class="ain-navbar-link" href="{{url}}">{{label}}</a>
 	</li>
 {{/foreach}}
