--- a/partials/post_navigation.hbs
+++ b/partials/post_navigation.hbs
@@ -4,11 +4,11 @@
         {{#prev_post}}
             <section class="six columns">
 
-                <section class="panel panel-prev-post">
-                    <header class="panel-header">
+                <section class="ain-panel panel-prev-post">
+                    <header class="ain-panel-header">
                         <a class="panel-post-header-link" href="{{url}}">{{title}}</a>
                     </header>
-                    <section class="panel-body">
+                    <section class="ain-panel-body">
                         <p>{{excerpt words="10"}}&hellip;</p>
                     </section>
                 </section>
@@ -19,11 +19,11 @@
         {{#next_post}}
             <section class="six columns">
 
-                <section class="panel panel-next-post">
-                    <header class="panel-header">
+                <section class="ain-panel panel-next-post">
+                    <header class="ain-panel-header">
                         <a class="panel-post-header-link" href="{{url}}">{{title}}</a>
                     </header>
-                    <section class="panel-body">
+                    <section class="ain-panel-body">
                         <p>{{excerpt words="10"}}&hellip;</p>
                     </section>
                 </section>
