--- a/assets/ihana.scss
+++ b/assets/ihana.scss
@@ -24,6 +24,9 @@
 @import '../bower_components/allineed/src/allineed/core/components/panels';
 @import '../bower_components/allineed/src/allineed/core/components/tables';
 
+@import '../bower_components/allineed-panel-info/panel-info-variables';
+@import '../bower_components/allineed-panel-info/panel-info';
+
 // Modules
 
 @import 'ihana-sidebar.scss';
@@ -42,7 +45,7 @@ img {
   margin: 2em auto;
 }
 
-.image {
+.ain-image {
   margin: 0;
 }
 
@@ -67,6 +70,11 @@ img {
   }
 }
 
+input {
+    @extend .ain-input;
+}
+
+
 .ihana-container,
 .ihana-post-container {
     margin: $base-padding-size * 2 0;
@@ -83,8 +91,7 @@ img {
 }
 
 blockquote {
-  @extend .blockquote;
-  @extend .blockquote-primary;
+  @extend .ain-blockquote-primary;
 }
 
 // Panels
@@ -101,13 +108,13 @@ blockquote {
 }
 
 .panel-prev-post {
-  .panel-header {
+  .ain-panel-header {
     text-align: left;
   }
 }
 
 .panel-next-post {
-  .panel-header {
+  .ain-panel-header {
     text-align: right;
   }
 }
@@ -146,4 +153,8 @@ code {
 
 // Media Queries
 
-@media (min-width: $base-media-phone-min) {}
+@media (max-width: $base-media-phone-min) {
+  .ihana-post-title {
+    font-size: 1em;
+  }
+}
