--- a/page.hbs
+++ b/page.hbs
@@ -4,8 +4,8 @@
 
 <main class="container ihana-post-container" role="main">
 
-    <header class="header">
-      <section class="header-post">
+    <header>
+      <section>
           <section class="row">
               <section class="twelve columns">
                  <h1>{{title}}</h1>
@@ -19,7 +19,7 @@
             {{content}}
         </section>
     </section>
-		
+
     <aside class="row container-section">
        {{> "author"}}
     </aside>
