--- a/partials/author.hbs
+++ b/partials/author.hbs
@@ -1,19 +1,19 @@
 {{#author}}
 
-    <section class="panel">
-        <section class="panel-body">
+    <section class="ain-panel">
+        <section class="ain-panel-body">
             <section class="row">
                 <section class="three columns u-text-centered">
                     {{#if image}}
-                        <img src="{{image}}" class="image image-squared" />
+                        <img src="{{image}}" class="ain-image-squared" />
                     {{/if}}
                 </section>
                 <section class="nine columns">
-                    <h3 class="example-header">{{name}}</h3>
+                    <h3>{{name}}</h3>
                     {{#if bio}}
                         <p>{{bio}}</p>
                     {{/if}}
-                    <a class="button" id="moreAboutMe" href="{{url}}">More about me</a>
+                    <a class="ain-button" id="moreAboutMe" href="{{url}}">More about me</a>
                 </section>
             </section>
         </section>
